# uvc-demo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lionel/jni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt  hello.cpp
app/src/main/cpp/libusb/android/jni/: libusb.mk
app/src/main/cpp/libusb/libusb/: libusb.h
app/src/main/cpp/libuvc/android/jni/: Android.mk
app/src/main/cpp/libuvc/include/: libusb.h
app/src/main/cpp/libuvc/include/libuvc/: libuvc.h
app/src/main/cpp/uvc_camera/: Android.mk  uvc_camera.cpp
app/src/main/java/com/lionel/jni/: MainActivity.kt  NativeJava.java  UVCCamera.java  UnRootedSample.java
app/src/main/java/com/lionel/jni/usb/: BuildCheck.java  DeviceFilter.java  HandlerThreadHandler.java  USBMonitor.java  USBVendorId.java
app/src/test/java/com/lionel/jni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
